# recorder-mx-py

./: .gitignore  README.md  pyproject.toml
matrix_call_multitrack_recorder/: __about__.py  __init__.py  __main__.py  bot.py  recorder.py
matrix_call_multitrack_recorder/utils/: __init__.py  future_map.py  misc_types.py
